--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
     overflow: hidden;
     width: 100%;
     height: 100vh;
-
 }
 
 nav {
@@ -63,26 +62,26 @@ a {
     background-color: rgb(0, 0, 0, 0.2);
     backdrop-filter: blur(50px);
     border-radius: 20px;
-
-
 }
 
 @keyframes anim {
     from {
         opacity: 0;
         transform: translateY(-50px);
-
     }
 
     to {
         opacity: 1;
         transform: translateY(0);
-
     }
 
 }
 
+
+
 /* ABOUT SECTION */
+
+
 .sub-heading {
     height: 100vh;
     display: flex;
@@ -90,25 +89,98 @@ a {
     align-items: center;
 }
 
+.about-text1 {
+    animation-name: anim1;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    height: 100%;
+    text-align: justify;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.space {
+    height: 100px;
+    background-color: beige;
+    display: none;
+}
+
+.content {
+    width: 100%;
+    /* height: 400px; */
+    padding: 70px 20px 20px 20px;
+    background-color: beige;
+    animation-name: anim;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+}
+
+.about-footer {
+    /* height: 40px; */
+    color: white;
+    text-align: center;
+    background-color: rgb(117, 117, 91);
+}
+
+@keyframes anim1 {
+    from {
+        opacity: 0;
+        transform: translateX(-90px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+
+}
+
+
+
+@media(min-width:368px) {
+    .lobby-1 {
+        order: 1;
+    }
+
+    .lobby-2 {
+        order: 0;
+    }
+
+}
 
 @media(min-width:1024px) {
     nav {
         width: 100%;
         padding: 0;
-
     }
 
     .nav-bar {
         width: 100%;
         position: fixed;
         display: flex;
-        padding: 20px;
-
+        padding: 10px;
         justify-content: space-around;
     }
 
     .nav-items {
         font-size: large;
+    }
+
+    .space {
+        display: block;
+        background-color: beige;
+    }
+
+    .lobby-1 {
+        order: 0;
+    }
+
+    .lobby-2 {
+        order: 1;
     }
 
 }
