--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav {
     width: 100%;
     display: flex;
     position: fixed;
+    z-index: 1;
     padding: 10px;
     background-color: rgb(0, 0, 0, 0.2);
     justify-content: space-between;
@@ -136,6 +137,14 @@ a {
     background-color: rgb(117, 117, 91);
 }
 
+.img {
+    transition: 0.5s ease;
+}
+
+.img:hover {
+    transform: scale(1.02, 1.02);
+}
+
 @keyframes anim1 {
     from {
         opacity: 0;
@@ -161,17 +170,16 @@ a {
 
 .room-card {
     width: 100%;
-    /* height: 100vh; */
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    z-index: -1;
+
     padding: 20px;
 
 }
 
 .bg {
-    z-index: -1;
+
     position: relative;
     background-color: rgb(193, 163, 193);
 
@@ -179,14 +187,42 @@ a {
 
 .card {
     width: 300px;
-    z-index: -1;
+
     margin: 10px;
+    transition: 0.5s ease;
+
 
 }
 
 .card-img-top {
     height: 250px;
 
+}
+
+.card:hover {
+    transform: scale(1.05, 1.05);
+}
+
+/* FORM SECTION  */
+
+.form-css {
+    overflow: hidden;
+    padding: 20px;
+}
+
+
+.available {
+    /* height: 25%; */
+    padding: 40px 20px 20px 20px;
+    background-color: rgb(67, 65, 65);
+    color: bisque;
+    text-align: center;
+}
+
+.form-bg {
+    /* height: 58.95%; */
+    color: white;
+    background-color: rgb(67, 65, 65);
 }
 
 
